--- a/src/logic/tex/corelogic-zebrapuzzle.tex
+++ b/src/logic/tex/corelogic-zebrapuzzle.tex
@@ -6,10 +6,8 @@ Bei diesem Rätsel geht es darum, aus einer Menge von 5 Personen, die sich alle 
 
 \subsection{Code}
 
-Das entsprechendes Codebeispiel kann auf folgender Seite \url{https://github.com/swannodette/logic-tutorial#zebras} gefunden werden.
-
-
-Nachfolgend werden die im Codebeispiel definierten Methoden erkl"art.
+Das entsprechendes Codebeispiel kann auf folgender Seite \url{https://github.com/swannodette/logic-tutorial#zebras} gefunden werden. 
+Nachfolgend werden die im Codebeispiel definierten Methoden erklärt.
 
 \subsubsection{righto}
 
@@ -20,6 +18,8 @@ Nachfolgend werden die im Codebeispiel definierten Methoden erkl"art.
 \end{lstlisting}
 
 Diese Methode erzeugt alle Beschränkungen, die wir benötigen, damit \dq{}y\dq{} rechts von \dq{}x\dq{} steht. Ein rekursiver Aufruf sorgt stößt den Prozess sooft wieder an bis der Rest, dargstellt durch das \code{?r} behandelt wurde. Genauer werden also die Constraints zurückgegeben, oder auch Goals, die der Solver benötigt um unser Ergebnis zu errechnen.
+
+\subsubsection{nexto}
 
 \begin{lstlisting}
 (defn nexto [x y 1]
@@ -52,8 +52,8 @@ Diese Methode erzeugt alle Beschränkungen, die wir benötigen, damit \dq{}y\dq{
      (nexto [_ _ _ 'fox _] [_ 'chesterfields _ _ _] hs))))
 \end{lstlisting}
 
-Diese Methode enth"alt s"amtliche Regeln des Puzzles. Durch die Wahl von sprechenden Namen, der verwendeten und selbst definierten Methoden, sind die Regeln sehr gut abzulesen. Die erste Zeile enth"alt z.B. zwei Regeln. Einmal die Regel, das es f"unf H"auser gibt und die Regel, das die Person im mittleren Haus trinkt Milch trinkt. Die zweite Regel sagt aus, das die Person ganz links (firsto, "der Erste") norwegisch ist. Die Dritte, das neben der norwegischen Person ein blaues Haus steht und so weiter.
-Im Programmcode werden in der zweiten Zeile die Zeichen \dq{}lvar\dq{} an das Symbol \dq{}\_\dq{} gebunden. Das erspart einige Zeichen Code und erh"oht die Lesbarkeit. 
+Diese Methode enthält sämtliche Regeln des Puzzles. Durch die Wahl von sprechenden Namen, der verwendeten und selbst definierten Methoden, sind die Regeln sehr gut abzulesen. Die erste Zeile enthält z.B. zwei Regeln. Einmal die Regel, das es fünf Häuser gibt und die Regel, das die Person im mittleren Haus trinkt Milch trinkt. Die zweite Regel sagt aus, das die Person ganz links (firsto, "der Erste") norwegisch ist. Die Dritte, das neben der norwegischen Person ein blaues Haus steht und so weiter.
+Im Programmcode werden in der zweiten Zeile die Zeichen \dq{}lvar\dq{} an das Symbol \dq{}\_\dq{} gebunden. Das erspart einige Zeichen Code und erhöht die Lesbarkeit. 
 Die fünf Häuser mit jeweils einer Person und deren fünf verschiedene Eigenschaften, werden intern durch eine 5x5 Matrix dargestellt. Ein Vektor der größe fünf für die Darstellung der Häuser, und jeweils für jedes Haus bzw. die Person und deren Eigenschaften ein Vektor der Größe fünf. Ein \dq{}Haus-Vektor\dq{} hat dabei folgende Bedeutung:
 \\
 \\
@@ -61,11 +61,29 @@ Die fünf Häuser mit jeweils einer Person und deren fünf verschiedene Eigensch
 
 \subsection{Lösung des Rätsels}
 
+Nach der Ausführung, und damit der Definition der obigen Codezeilen, führt man folgenden Code aus.
+
 \begin{lstlisting}
 (run 1 [q] (zebrao q))
+\end{lstlisting}
+
+Damit führen wir unsere Lösungsmaschine, mit den durch \code{zebrao} erstellten Constraints aus und lassen uns durch die Angabe des Arguments \dq{}1\dq{} die Erste Lösung zurückgeben.
+
+Ausgabe der Lösung:
+
+\begin{lstlisting}
   ([[norwegian kools _.0 fox yellow]
     [ukrainian chesterfields tea horse blue]
     [englishman oldgolds milk snails red]
     [spaniard lucky-strikes oj dog ivory]
     [japanese parliaments coffee _.1 green]])
 \end{lstlisting}
+
+In diesem Fall kann man die Ausgangsfragen beantworten:
+
+\begin{enumerate}
+  \item Wer trinkt Wasser?
+  \item Wer hat den Fisch?
+\end{enumerate}
+
+Die Ausgabe sagt aus, das wir in jedem Fall an beiden Stellen zwei voneinander verschiedene Ergebnisse haben. Somit wäre eine plausible Lösung in unserem Fall, das der Norweger Wasser trinkt und der Japaner einen Fisch hat (Kommt auf die Fragestellung an).
