corelogic and pdf

--- a/src/logic/tex/corelogic.tex
+++ b/src/logic/tex/corelogic.tex
@@ -79,6 +79,7 @@
 
 \input{corelogic-logic-programming}
 \input{corelogic-relational}
+\input{corelogic-coredotlogic}
 \input{corelogic-principles}
 \input{corelogic-syntax}
 \input{corelogic-zebrapuzzle}
