--- a/src/logic/tex/corelogic.tex
+++ b/src/logic/tex/corelogic.tex
@@ -15,7 +15,7 @@
 \usepackage{ifthen}
 \usepackage{makeidx}
 \usepackage{graphicx}
-\usepackage{amsmath}
+\usepackage{mathtools}
 \usepackage{amssymb}
 \usepackage{alltt}
 \usepackage{scalefnt}
@@ -82,6 +82,7 @@
 \input{corelogic-coredotlogic}
 \input{corelogic-principles}
 \input{corelogic-syntax}
+\input{corelogic-clp}
 \input{corelogic-zebrapuzzle}
 
 \newpage
