--- a/src/logic/tex/corelogic-zebrapuzzle.tex
+++ b/src/logic/tex/corelogic-zebrapuzzle.tex
@@ -1,4 +1,4 @@
-\section{Einstein-Test oder Zebrapuzzle}
+\section{Beispiel Einstein-Test oder Zebrapuzzle}
 
 \subsection{Hintergrund}
 
@@ -59,6 +59,12 @@ Die fünf Häuser mit jeweils einer Person und deren fünf verschiedene Eigensch
 \\
 \code{['Nationalität' 'Zigarettenmarke' 'Getränk' 'Haustier' 'Hausfarbe']}\\
 
+Somit existiert hier eine Relation \dq{}Person\dq{} und \dq{}Nachbarschaft\dq{}. Diese wären wie folgt definiert:
+\begin{lstlisting}
+Relation P : Ist A, hat ... Keine ahnung, Später 
+Relation N : P wohnt neben Q; Tupel: (P, Q)
+\end{lstlisting}
+
 \subsection{Lösung des Rätsels}
 
 Nach der Ausführung, und damit der Definition der obigen Codezeilen, führt man folgenden Code aus.
@@ -86,4 +92,4 @@ In diesem Fall kann man die Ausgangsfragen beantworten:
   \item Wer hat den Fisch?
 \end{enumerate}
 
-Die Ausgabe sagt aus, das wir in jedem Fall an beiden Stellen zwei voneinander verschiedene Ergebnisse haben. Somit wäre eine plausible Lösung in unserem Fall, das der Norweger Wasser trinkt und der Japaner einen Fisch hat (Kommt auf die Fragestellung an).
+Die Ausgabe sagt aus, das wir in jedem Fall an beiden Stellen zwei voneinander verschiedene Ergebnisse haben. Somit wäre eine plausible Lösung in unserem Fall, das der Norweger Wasser trinkt und der Japaner einen Fisch hat. Ob Fisch und Wasser oder andere Haustiere und Getränke gefragt sind, kommt natürlich auf die Fragestellung an.
