--- a/src/logic/tex/corelogic-principles.tex
+++ b/src/logic/tex/corelogic-principles.tex
@@ -1,6 +1,5 @@
-\section{Grunds"atze}
 
-\subsection{core.logic}
+\subsection{Paket core.logic}
 
 core.logic ist eine Implementierung des auf Scheme basierenden Solvers: miniKanren
 
@@ -20,7 +19,7 @@ Ein logischer Ausdruck ist also eine Anweisung f"ur den Solver und besteht aus d
 \end{itemize}
 
 
-\subsection{Logische Variablen}
+\subsubsection{Logische Variablen}
 Logische Variablen sind Container f"ur einen nicht eindeutigen Wert. Das hei\ss{}t, dass eine logische Variable mehrere Werte nacheinander annehmen kann, um diese auszugeben oder weiterzugeben.
 %//Wie sind die logischen Variablen implementiert? [...]
 Logische Variablen k"onnen spezielle Werte haben, zum Beispiel \_0. Dies soll darstellen, dass die entsprechende logische Variable jeden beliebigen Wert annehmen kann, um die Bedingungen zu erf"ullen.
