--- a/src/logic/tex/corelogic-relational.tex
+++ b/src/logic/tex/corelogic-relational.tex
@@ -1,8 +1,8 @@
-\section{Relationale Programmierung}
+\subsection{Relationale Programmierung}
 
 
 
-\subsection{Beispiel}
+\subsubsection{Beispiel}
 
 Eine Relation plus stellt eine Abbildung des Kreuzprodukts zweier natürlicher Zahlen auf eine natürliche Zahl dar.
 
