--- a/src/logic/tex/corelogic-logic-programming.tex
+++ b/src/logic/tex/corelogic-logic-programming.tex
@@ -1,8 +1,8 @@
-\subsection{Grundlegendes}
+\section{Grundlegendes}
 
 In diesem Kapitel wird die logische Programmierung kurz vorgestellt, um die Grundlagen auf denen auch das Clojure Paket core.logic besteht vorwegzunehmen. Weiterhin sollen auch Grundz"uge der relationalen Programmierung erkl"art werden, auf der einige Funktionen der logischen Programmierung basieren.
 
-\subsubsection{Grundlagen der logische Programmierung}
+\subsection{Grundlagen der logische Programmierung}
 
 Logische Programmierung besteht nicht wie die funktionale Programmierung aus Folgen von Anweisungen, sondern aus Regeln und Fakten mit denen der Interpreter versucht L"osungsaussagen zu treffen. So gibt man zum Beispiel dem Interpreter die Regel, dass die Variable x eine Zahl sein soll, die gleich sein soll mit dem Ergebnis aus \code{2 + 3}.
 
