--- a/src/logic/tex/corelogic-principles.tex
+++ b/src/logic/tex/corelogic-principles.tex
@@ -55,7 +55,7 @@ Beispiel:
 Da die logische Variable x durch \code{fresh} eingeführt wurde, kann diese nur innerhalb des \code{fresh}-Bereichs genutzt werden. Außerhalb der Klammern von \code{fresh} ist x nicht mehr gültig. Die logische Variable q wurde allerdings von  \code{run} eingeführt und ist daher auch innerhalb von \code{fresh} verfügbar und kann dort genutzt werden.
 
 
-\subsection{Beschr"ankungen}
+\subsubsection{Beschr"ankungen}
 
 Beschr"ankungen oder auch Constraints sind Ausdr"ucke die die Werte die eine logische Variable annehmen kann, beschr"anken. Es k"onnen mehrere Beschr"ankungen existieren die untereinander in einer Konjunktion stehen:
 \begin{lstlisting}
