--- a/src/logic/tex/corelogic-zebrapuzzle.tex
+++ b/src/logic/tex/corelogic-zebrapuzzle.tex
@@ -1,10 +1,8 @@
-\subsection{Einstein-Test oder Zebrapuzzle}
-
-\subsubsection{Hintergrund}
+\section{Einstein-Test oder Zebrapuzzle}
 
 Bei diesem Rätsel geht es darum, aus einer Menge von 5 Personen, die sich alle jeweils durch die Farbe ihres Hauses, ihr Getränk, ihr Haustier, ihre Zigarettenmarke und ihre Nationalität unterscheiden, mithilfe von gegebenen Informationen und einem logischen Lösungsansatz, genau eine Person mit einer gewissen Eigenschaft herauszufinden. Näheres hierzu z.B. auf Wikipedia.
 
-\subsubsection{Code}
+\subsection{Code}
 
 Das entsprechendes Codebeispiel kann auf folgender Seite \url{https://github.com/swannodette/logic-tutorial#zebras} gefunden werden. 
 Nachfolgend werden die im Codebeispiel definierten Methoden erklärt.
@@ -65,7 +63,7 @@ Relation P : Ist A, hat  Keine ahnung, Spaeter
 Relation N : P wohnt neben Q; Tupel: (P, Q)
 \end{lstlisting}
 
-\subsubsection{Lösung des Rätsels}
+\subsection{Lösung des Rätsels}
 
 Nach der Ausführung, und damit der Definition der obigen Codezeilen, führt man folgenden Code aus.
 
