--- a/src/logic/tex/corelogic.tex
+++ b/src/logic/tex/corelogic.tex
@@ -77,6 +77,7 @@
 %
 %==============================================================================
 
+\input{corelogic-primer}
 \input{corelogic-logic-programming}
 \input{corelogic-relational}
 \input{corelogic-coredotlogic}
