--- a/src/logic/tex/corelogic-syntax.tex
+++ b/src/logic/tex/corelogic-syntax.tex
@@ -45,19 +45,8 @@ Beispiel für \code{conde}:
 )
 \end{lstlisting}
 
-Das sind die 3 grundlegenden Funktionen von core.logic. Das gesamte Package beinhaltet aber nat"urlich noch viele mehr, Wie z.B. das eben gesehene (membero \dots{}). Alle weiteren Funktionen im Package bauen aber auf den 3 Basis Funktionen auf. H"ohere Funktionen, folgen einer bestimmten Namenskonvention, wie z.B. zu sehen bei conde und memebero, werden Funktionen in core.logic die schon im clojure.core existieren mit einem a,e,u oder o um diese von den regul"aren clojure Funktionen zu differenzieren und diese nicht zu "uberschreiben.
+Das sind die 3 grundlegenden Funktionen von core.logic. Das gesamte Package beinhaltet aber nat"urlich noch viele mehr, Wie z.B. das eben gesehene (membero \dots{}). Alle weiteren Funktionen im Package bauen aber auf den 3 Basis Funktionen auf. H"ohere Funktionen, folgen einer bestimmten Namenskonvention, wie z.B. zu sehen bei conde und memebero, werden Funktionen in core.logic die schon im clojure.core existieren mit einem a, e, u oder o um diese von den regul"aren clojure Funktionen zu differenzieren und diese nicht zu "uberschreiben. Weiterhin stehen diese Suffixe oft auch für bestimmte Arten von Funktionen, sodass der Entiwckler auf den ersten Blick erkennen kann, wie diese Funktion in etwa arbeitet. Ansonsten bestehen diese Namenskonventionen hauptsächlich aus historischen Gründen.
 
-Ein nachgestelltes 
-\begin{itemize}
-  \item a steht f"ur 
-  
-  \item e steht f"ur 
-  
-  \item u steht f"ur 
-  
-  \item o steht f"ur die R"uckgabe von Goals bzw. einer Relation
-
-\end{itemize}
 
 \subsubsection{Aufruf des Solvers}
 
