added primer, more in relation new build

--- a/src/logic/tex/corelogic-database.tex
+++ b/src/logic/tex/corelogic-database.tex
@@ -1,4 +1,4 @@
-\section{Weitere Features von core.logic}
+\section{Weitere Features von core.logic} \label{sec:features}
 
 \subsection{Datenbanken}
 
