--- a/src/logic/tex/corelogic-primer.tex
+++ b/src/logic/tex/corelogic-primer.tex
@@ -1,2 +1,4 @@
 \section{Einführung}
-
+Diese Ausarbeitung wurde im Rahmen der Veranstaltung ''Funktionale Programmierung mit Clojure'' geschrieben. Sie beschäftigt sich speziell mit dem Clojure Paket core.logic und der logischen Programmierung. Das erste Kapitel beschreibt Grundlagen der Logischen Programmierung, um eine allgemeine Wissensbasis herzustellen. Im zweiten Kapitel untersuchen wir das Paket core.logic näher und beschreiben dessen Eigenheiten, Syntax und Funktionen.
+Nachfolgend im dritten Kapitel beschreiben wir zusätzliche Features die core.logic derzeit unterstützt und die den Funktionsumfang des Logik Paketes beträchtlich erhöhen.
+Zum Abschluss zeigen wir eine Anwendung von core.logic mit dem Einsteintest und versuchen diesen, mit den vorher gewonnen Informationen zu erklären.
