--- a/src/logic/tex/corelogic-relational.tex
+++ b/src/logic/tex/corelogic-relational.tex
@@ -1,6 +1,6 @@
-\subsection{Relationale Programmierung}
+\subsection{Relationen in der logischen Programmierung}
 
-
+Funktionen in der logischen Programmierung basieren oft auf Relationen, da diese es erlauben, Bedingungen rückwärts auszuwerten. Eine logische Programmiersprache wie zum Beispiel Prolog, die mit Fakten und Datenbanken arbeitet, erlaubt es in den Fakten, eigene Relationen darzustellen und diese hinterher mit den entsprechenden Funktionen auszuwerten. Darauf gehen wir näher im Kapitel \emph{\nameref{sec:features}} ein.
 
 \subsubsection{Beispiel}
 
