core.logic einleitung angepasst new build

--- a/src/logic/tex/corelogic-coredotlogic.tex
+++ b/src/logic/tex/corelogic-coredotlogic.tex
@@ -2,7 +2,15 @@
 
 \subsection{Allgemeines zu core.logic}
 
-Die Clojure-Erweiterung core.logic bietet die Möglichkeit, in Clojure, Prolog-ähnlich verschieden Programmierparadigmen zu verfolgen, wie z.B. Relationale Programmierung [...] oder auch logische Constraintprogrammierung. Damit soll eine einfache Möglichkeit geschaffen werden, bei der Lösung von logischen Problemen, die bestehenden Mittel (von core.logic) zu nutzen oder auch zu erweitern.
+Die Clojure-Erweiterung core.logic bietet die Möglichkeit, in Clojure, Prolog-ähnlich verschieden Programmierparadigmen zu verfolgen, wie z.B. die einfache logische Programmierung oder auch die logische Constraintprogrammierung. Damit soll eine einfache Möglichkeit geschaffen werden, bei der Lösung von logischen Problemen, die bestehenden Mittel (von core.logic) zu nutzen oder auch zu erweitern.
 
-Momentan stehen David Nolen und Rich Hickey, Erfinder des Lisp-Dialekts Clojure (s. Wikipedia) hinter dem quelloffenen Projekt.
+Momentan stehen David Nolen und Rich Hickey, Erfinder des Lisp-Dialekts Clojure hinter dem quelloffenen Projekt.
 
+core.logic wird stetig weiterentwickelt und erhält immer wieder neue Features und Funktionen. Zum aktuellen Zeitpunkt schafft es core.logic mit der richtigen Implementierung ein Sudoku Rätsel innerhalb von wenigen Sekunden zu lösen. Leider ist core.logic nicht die effizienteste Implementierung eines logischen Programmierparadigmas und terminiert daher etwas langsamer als herkömmliche logische Programmiersprachen.
+
+core.logic wurde auf Basis des Solvers miniKanren, der auf Scheme basiert, in die Clojure Welt eingeführt. Daher ist core.logic der miniKanren implementation sehr ähnlich und verwendet auch dessen Namenskonventionen und Funktionen.
+
+Kanren ist Japanisch und kann in etwa mit Relation übersetzt werden. Da der Solver core.logic und auch miniKanren sehr stark von Relationen abhängig sind und diese nutzen um Bedingungen aufzulösen, ist es nicht überraschend, dass zumindest der Solver miniKanren danach benannt wurde.
+
+Der Solver miniKanren lässt sich mit einem Satz in etwa so beschreiben:
+,,Wenn miniKanren ein Ausdruck und eine gewünschte Ausgabe gegeben wird, kann es dies Rückwärts ausführen und findet dabei alle möglichen Eingaben zu dem Ausdruck die die gewünschte Ausgabe erzeugen.''
